--- a/BookList.xaml
+++ b/BookList.xaml
@@ -18,11 +18,11 @@
             <Button Name="prev" Width="204" Height="50" Margin="-1350,-70,0,0" FontSize="20" Click="previouspage">Назад</Button>
 
             <Label Width="150"  FontSize="20" Margin="-1400,20,0,0" FontFamily="Century Gothic">Название</Label>
-            <Label Width="150"  FontSize="20" Margin="-930,-37,-35,-12" FontFamily="Times New Roman">Автор</Label>
-            <Label Width="100"  FontSize="20" Margin="-580,-37,-35,-12" FontFamily="Times New Roman">Код</Label>
-            <Label Width="300"  FontSize="20" Margin="80,-37,-35,-12" FontFamily="Times New Roman">Издатель</Label>
-            <Label Width="92"  FontSize="20" Margin="580,-37,-35,-12" FontFamily="Times New Roman">Доступно</Label>
-            <Label Width="120"  FontSize="20" Margin="930,-37,-35,-12" FontFamily="Times New Roman">У читателей</Label>
+            <Label Width="150"  FontSize="20" Margin="-930,-37,-35,-12" FontFamily="Century Gothic">Автор</Label>
+            <Label Width="100"  FontSize="20" Margin="-580,-37,-35,-12" FontFamily="Century Gothic">Код</Label>
+            <Label Width="300"  FontSize="20" Margin="80,-37,-35,-12" FontFamily="Century Gothic">Издатель</Label>
+            <Label Width="110"  FontSize="20" Margin="580,-37,-35,-12" FontFamily="Century Gothic">Доступно</Label>
+            <Label Width="128"  FontSize="20" Margin="930,-37,-35,-12" FontFamily="Century Gothic">У читателей</Label>
             <StackPanel Name ="panel1" Height="50" Margin="0,50,0,0">
 
                 <Label Width="250" Name="Name1" FontSize="20" Margin="-1290,0,0,0">aaa</Label>
