--- a/BookList.xaml
+++ b/BookList.xaml
@@ -11,7 +11,7 @@
         <StackPanel Orientation="Vertical"  HorizontalAlignment="Right" Width="1550" VerticalAlignment="Center" Background="#FFC5D0E6">
             <Button Width="35" Height="40" Margin="1000,10,0,0" FontSize="30" Foreground="#FF565656" Click="close" Background="#FFC5D0E6" BorderBrush="#FFC5D0E6">X</Button>
             <Button Width="35" Height="40" Margin="900,-35,0,0" FontSize="30" Foreground="#FF565656" Click="min" BorderBrush="#FFC5D0E6" Background="#FFC5D0E6">-</Button>
-            <Button Width="100" Height="50" Margin="-880,0,0,0" Click="mainMenu">Главное меню</Button>
+            <Button Name="backButton" Width="100" Height="50" Margin="-880,0,0,0" Click="mainMenu">Главное меню</Button>
             <TextBox Name="searchBar" Width="500" Height="50" TextChanged="search" Margin="350,-40,0,0"></TextBox>
 
             <Button Name="next" Width="204" Height="50" Margin="-420,-70,0,0" FontSize="20" Click="nextpage">Вперед</Button>
